fix: tooltip contrast arrow color

--- a/src/components/Tooltip/style.scss
+++ b/src/components/Tooltip/style.scss
@@ -12,16 +12,16 @@
     box-shadow: $shadow-tooltip;
   }
   &.contrast {
-    &.top > .tooltip-arrow {
+    &.bs-tooltip-top .tooltip-arrow::before {
       border-top-color: white;
     }
-    &.right > .tooltip-arrow {
+    &.bs-tooltip-end .tooltip-arrow::before {
       border-right-color: white;
     }
-    &.bottom > .tooltip-arrow {
+    &.bs-tooltip-bottom > .tooltip-arrow::before {
       border-bottom-color: white;
     }
-    &.left > .tooltip-arrow {
+    &.bs-tooltip-start > .tooltip-arrow::before {
       border-left-color: white;
     }
     .tooltip-inner {
